--- a/public/index.html
+++ b/public/index.html
@@ -257,6 +257,7 @@
     <div class="footer">
       <p>Explore the magic of numbers with these simple tools</p>
     </div>
+    <a href="/collections.html">Go to collection Page</a>
   </div>
   
   <script>
