--- a/public/index.html
+++ b/public/index.html
@@ -259,6 +259,9 @@
     </div>
     <a href="/collections.html">Go to collection Page</a>
   </div>
+  <div class="copyright">
+            &copy; <span id="currentYear"></span> Suhail. All rights reserved.
+        </div>
   
   <script>
     function createConfetti() {
